# tensorflow

./: SCR_2.8.0.txt
tensorflow/: BUILD  tensorflow.bzl
tensorflow/c/: BUILD
tensorflow/c/eager/: BUILD
tensorflow/cc/: BUILD
tensorflow/cc/saved_model/: BUILD
tensorflow/core/: BUILD
tensorflow/core/common_runtime/eager/: BUILD
tensorflow/core/runtime_fallback/: BUILD
tensorflow/core/runtime_fallback/kernel/: BUILD
tensorflow/core/runtime_fallback/runtime/: BUILD
tensorflow/core/runtime_fallback/util/: BUILD
tensorflow/core/tfrt/utils/: BUILD
tensorflow/lite/: CMakeLists.txt  optional_debug_tools.cc
tensorflow/lite/delegates/flex/: BUILD  build_def.bzl
tensorflow/lite/examples/label_image_odt/: BUILD  CMakeLists.txt  bitmap_helpers.cc  bitmap_helpers.h  bitmap_helpers_impl.h  get_top_n.h  get_top_n_impl.h  label_image.cc  label_image.h  label_image_test.cc  log.h
tensorflow/lite/testing/: BUILD
tensorflow/python/: BUILD
tensorflow/python/platform/: BUILD
tensorflow/python/tools/: BUILD
